# gargoyle

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  PROJECT_VISION.md  README.md  claude-install.sh  gargoyle-memory.plugin  index.html  package-lock.json  package.json  pnpm-lock.yaml
plugin/: README.md  install.sh  manifest.json  pyproject.toml  server.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: memory-searcher.md
plugin/hooks/: hooks.json
plugin/scripts/: memory-search.py  memory-writer.py
plugin/skills/search-memory/: SKILL.md
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/logs/: gargoyle.2026-02-19  gargoyle.2026-04-04
src-tauri/migrations/: 001_initial_schema.sql  002_wave1_entity_types.sql  003_wave2_entity_types.sql  004_wave3_entity_types.sql  005_new_entity_types.sql  006_chat_tables.sql  007_templates_table.sql  008_memory_tables.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/agents/: ARCHITECTURE.md  db_sync_agent.rs  entity_manager.rs  graph_build_agent.rs  graph_query.rs  intake_agent.rs  intake_handler.rs  memory_agent.rs  mod.rs  pipeline.rs  router.rs  template_curator.rs  tests.rs  types.rs
src-tauri/src/commands/: agent_commands.rs  chat_commands.rs  claim_commands.rs  context_commands.rs  dedup_commands.rs  entity_commands.rs  graph_commands.rs  intake_commands.rs  llm_commands.rs  mod.rs  relation_commands.rs  search_commands.rs  template_commands.rs
src-tauri/src/config/: entity_type_config.rs  mod.rs  template_loader.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  seeders.rs
src-tauri/src/mcp/: tools.rs
src-tauri/src/models/: artifact.rs  chat.rs  claim.rs  custom_relation_type.rs  dedup.rs  embedding.rs  entity.rs  memory.rs  mod.rs  operational_context.rs  patch.rs  relation.rs  run.rs  template.rs
src-tauri/src/patch/: apply.rs  attach_artifact.rs  create_claim.rs  create_entity.rs  create_relation.rs  delete_relation.rs  merge_entities.rs  mod.rs  ops.rs  promote_claim_op.rs  propose_relation_type.rs  update_context_op.rs  update_entity.rs
src-tauri/src/schema/: field_def.rs  mod.rs  registry.rs  version.rs
src-tauri/src/schema/types/: audience.rs  backlog.rs  brief.rs  budget.rs  campaign.rs  event.rs  (+17 more)
src-tauri/src/services/: chat_service.rs  claim_service.rs  context_manager.rs  dedup.rs  embeddings.rs  graph_builder.rs  indexer.rs  llm.rs  memory_service.rs  mod.rs  store.rs  template_runner.rs  template_service.rs  tool_executor.rs
src-tauri/src/validation/: lock_validator.rs  mod.rs  referential_validator.rs  schema_validator.rs  status_validator.rs
src-tauri/tests/: fuzz_concurrency_test.rs  fuzz_patch_test.rs  load_concurrent_templates_test.rs  load_graph_growth_test.rs  load_migration_test.rs  memory_integration_test.rs  perf_benchmarks.rs  scenario_10_audit_test.rs  scenario_1_patch_test.rs  scenario_2_locking_test.rs  scenario_3_schema_version_test.rs  scenario_4_status_machine_test.rs  scenario_5_dedup_test.rs  scenario_6_embedding_test.rs  scenario_7_claims_test.rs  scenario_8_relations_test.rs  scenario_9_templates_test.rs  stress_extended.rs
src-tauri/tests/common/: generators.rs  mod.rs
(+361 files in other folders)
