[project]
name = "gargoyle-memory-hooks"
version = "0.1.0"
description = "Auto-memory hook scripts for the gargoyle knowledge graph MCP plugin"
authors = [
    { name = "Bakobiibizo", email = "bakobiibizo@github.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["gargoyle", "mcp", "memory", "knowledge-graph", "ai"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/bakobiibizo/gargoyle"
Repository = "https://github.com/bakobiibizo/gargoyle"
Issues = "https://github.com/bakobiibizo/gargoyle/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
